tests/invalid_options_file/undefined_var.options_file
# References to undefined variables.
MCFLAGS-list += $(TYPE_SPEC_FLAGS)
MCFLAGS-list += $X
